# telegram-scrapper-open

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
src/telegram_intel_scraper/: main.py
src/telegram_intel_scraper/core/: config.py  logging.py  mongo.py  scrape.py
src/telegram_intel_scraper/providers/: call_to_webhook.py  ollama_provider.py  sentiment.py  telegram.py  text_translate_genai.py  text_translate_ollama.py  title_genai.py  title_llm.py  topic_classifier.py
src/telegram_intel_scraper/repositories/: articles_repository.py
tests/: test_config.py  test_llm_fallbacks.py  test_state_writer.py  test_webhooks.py
